# newmetavps

./: .gitignore  INSTALL-CPP-BUILD-TOOLS.txt  README.md  RUN-PANEL.ps1  build-backend.ps1
backend/: Cargo.toml
backend/src/: main.rs
cloudflared/: NAMED_TUNNEL.txt
docs/: ROOT-CAUSE-POSITION-CLOSES-IMMEDIATELY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  panelWsBase.ts
frontend/src/pages/: BotHistory.tsx  BotLivePositions.tsx  BotPositions.tsx  BotSettings.tsx  BotTrading.tsx  ExnessClones.tsx  FixedLot.css  FixedLot.tsx  SlaveAccounts.tsx
python_bridge/: hedge_watcher.py  mt5_bridge.py  run_hedge_watchers.bat
scripts/: dev-with-tunnel.ps1  run-named-tunnel.ps1  start-tunnel.ps1
